[metadata]
name = pylexibank
version = 3.4.1.dev0
author= Robert Forkel
author_email = dlce.rdm@eva.mpg.de
description = Python library implementing the lexibank workbench
keyword =
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/lexibank/pylexibank
project_urls =
    Bug Tracker = https://github.com/lexibank/pylexibank/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    pyclts>=3
    attrs>=19.2
    segments>=2.1.1
    cldfbench[excel]>=1.12.0
    csvw>=1.5.6
    clldutils>=2.8.0
    pycldf>=1.15.2
    pyglottolog>=2.0
    pyconcepticon>=2.1.0
    lingpy>=2.6.7
    appdirs
    requests
    termcolor
    gitpython
    tqdm
    beautifulsoup4
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pylexibank =
    dataset_templates/*
    *.json

[options.entry_points]
console_scripts =
    cldf = pycldf.__main__:main
cldfbench.commands =
    lexibank = pylexibank.commands
cldfbench.scaffold =
    lexibank_simple = pylexibank.scaffold:LexibankTemplate
    lexibank_combined = pylexibank.scaffold:LexibankCombinedTemplate

[options.extras_require]
dev =
    tox
    flake8
    wheel>=0.36
    build
    twine
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source = pylexibank

[coverage:report]
show_missing = true
skip_covered = true
exclude_lines =
    pragma: no cover

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
